# N15-analyse

./: .gitignore  2dhistplotter.ipynb  AccCalibrationRunner.cpp  AccFactorPlotter.ipynb  Alpha0AngularCross.cpp  Alpha0Cross.txt  Alpha0CrossFitter.ipynb  Alpha0crossRunner.cpp  AlphaAccCalibRunner.cpp  AlphaAccECorrector.cpp  AlphaCMs.txt  AlphaCMsOld.txt  AlphaCrossRunner.cpp  AlphaFactorFitter.cpp  AlphacmEFitter.cpp  CMakeLists.txt  Cascades.ipynb  N15Ecorrector.cpp  ShadowPlotter.ipynb  SolidAngleErrors.txt  VCHARGEfinder.cpp  accFit.txt  accFitAlpha.txt  accFitAlphaOld.txt  angCross1.txt  angCross1024.txt  angCross1025.txt  angCross1026.txt  angCross1108.txt  angCross1206.txt  angCross2.txt  angCross899.txt  angCross974.txt  angScatterCross1024.txt  angScatterCross1024Old.txt  angScatterCross1026.txt  angScatterCross1206.txt  angScatterCross1633.txt  angScatterCross1995.txt  angScatterCross974.txt  (+9 more)
.ipynb_checkpoints/: 2dhistplotter-checkpoint.ipynb  Alpha0CrossFitter-checkpoint.ipynb  Cascades-checkpoint.ipynb  cmEcalcs-checkpoint.ipynb
AngCross/: alpha1Fraction1000.txt  alpha1Fraction1034.txt  alpha1Fraction1045.txt  alpha1Fraction1055.txt  alpha1Fraction1400.txt  alpha1Fraction1710.txt  alpha1Fraction2137.txt  alpha1Fraction2460.txt  alpha1Fraction2564.txt  alpha1Fraction771.txt  alpha1Fraction813.txt  alpha1Fraction835.txt  alpha1Fraction860.txt  alpha1Fraction879.txt  alpha1Fraction880.txt  alpha1Fraction898.txt  alpha1Fraction920.txt  alpha1Fraction950.txt  alpha1Fraction975.txt  alpha1FractionwithLin1000.txt  alpha1FractionwithLin1034.txt  alpha1FractionwithLin1045.txt  alpha1FractionwithLin1055.txt  alpha1FractionwithLin1400.txt  alpha1FractionwithLin1710.txt  alpha1FractionwithLin2137.txt  alpha1FractionwithLin2460.txt  alpha1FractionwithLin2564.txt  alpha1FractionwithLin771.txt  alpha1FractionwithLin813.txt  alpha1FractionwithLin835.txt  alpha1FractionwithLin860.txt  alpha1FractionwithLin879.txt  alpha1FractionwithLin880.txt  alpha1FractionwithLin898.txt  alpha1FractionwithLin920.txt  alpha1FractionwithLin950.txt  alpha1FractionwithLin975.txt  angCascadeCross1000.txt  angCascadeCross1034.txt  (+56 more)
aFits/: 1.045028.root  1.145153.root  1.148211.root  1.152357.root  1.153974.root  1.154408.root  1.154467.root  1.155149.root  1.158069.root  1.161055.root  1.161303.root  1.161401.root  1.161762.root  1.161983.root  1.162042.root  1.162088.root  1.162173.root  1.162199.root  1.162203.root  1.162302.root  1.165751.root  1.165787.root  1.165853.root  1.165888.root  1.165960.root  1.165961.root  1.166003.root  1.166036.root  1.166111.root  1.166128.root  1.166144.root  1.166788.root  1.166861.root  1.167070.root  (+19 more)
(+845 files in other folders)
